pratical/final/challenges/uccdi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-2022-chall-uccdi-deployment
  namespace: challs
spec:
  replicas: 1
  selector:
    matchLabels:
      ctfd.chall.pod: ctfd-2022-uccdi-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        ctfd.chall.pod: ctfd-2022-uccdi-pod
    spec:
      containers:
      - image: doombringerazurai/chall-uccdi:1.0
        name: chall-uccdi
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "30m"
          limits:
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /.git/HEAD
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 60
      restartPolicy: Always
      tolerations:
        - key: "type"
          operator: "Equal"
          value: "challs"
          effect: "NoSchedule"
#      affinity:
#        nodeaffinity:
#          requiredduringschedulingignoredduringexecution:
#            nodeselectorterms:
#            - matchexpressions:
#              - key: type
#                operator: in
#                values:
#                -  chall-node
