pratical/final/challenges/uccdi/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: uccdi-network-policy
  namespace: challs
spec:
  podSelector:
    matchLabels:
      ctfd.chall.pod: ctfd-2022-uccdi-pod
  policyTypes:
  - Ingress
#apiVersion: networking.k8s.io/v1
#kind: NetworkPolicy
#metadata:
#  name: uccdi-network-policy
#  namespace: challs
#spec:
#  podSelector:
#    matchLabels:
#      ctfd.chall.pod: ctfd-2022-uccdi-pod
#  policyTypes:
#    - Ingress
#    - Egress
#  ingress:
#    - from:
#        - namespaceSelector:
#            matchLabels:
#              name: "ingress-nginx"
#      ports:
#        - protocol: TCP
#          port: 80
#        - ipBlock:
#            cidr: 172.17.0.0/16
#            except:
#              - 172.17.1.0/24
#        - namespaceSelector:
#            matchLabels:
#              project: challs
#        - podSelector:
#            matchLabels:
#              role: frontend
#  egress:
#    - to:
#        - ipBlock:
#            cidr: 10.0.0.0/24
#      ports:
#        - protocol: TCP
#          port: 5978
